- stderr when task failed - ExportGraph race condition fixed - ImportGraph log race condition fixed - Docker Util race condition fixed - Deleted project function - Log Window close button do only one action; close